# GPR5204-Raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
bench/: bench_bvh.cpp  bench_full_render.cpp
include/: aabb.hpp  bvh_node.hpp  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  job_system.hpp  material.hpp  perlin.h  pixels.hpp  ray.hpp  renderer.hpp  rtw_stb_image.h  rtweekend.hpp  sphere.hpp  texture.h  vec3.hpp  world.hpp
main/: main.cpp
src/: aabb.cpp  bvh_node.cpp  camera.cpp  hittable_list.cpp  job_system.cpp  main.cpp  material.cpp  pixels.cpp  renderer.cpp  sphere.cpp  world.cpp
